<resources>
    <string name="app_name">Shop-Kart</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_forgot_password">Forgot Password ?</string>
    <string name="text_forgot_password_heading">Forgot Password</string>
    <string name="text_login">Login</string>
    <string name="text_dont_have_an_account">Don\'t have an account? <font color="#000000"><b>Register</b></font></string>
    <string name="text_create_an_account">Create an account</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_terms_and_conditions">I agree to Terms and Conditions</string>
    <string name="text_register">Register</string>
    <string name="text_already_have_an_account">Already have an account? <font color="#000000"><b>Login</b></font></string>
    <string name="text_please_wait">Please wait…</string>
    <string name="text_forgot_password_description">Enter your email address we\'ll send you an email to reset your password</string>
    <string name="text_submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_profile">Profile</string>
    <string name="text_complete_profile">Complete Profile</string>
    <string name="hint_mobile">Mobile</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="preference_name">Shopkart Preferences</string>
    <string name="prefFirstName">firstName</string>
    <string name="prefLastName">lastName</string>
    <string name="prefEmail">email</string>
    <string name="text_save">Save</string>
    <string name="prefMobile">mobile</string>
    <string name="prefGender">gender</string>
    <string name="prefIsProfileCompleted">profileCompleted</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_order">My Orders</string>
    <string name="text_product">Product</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_settings">Settings</string>
    <string name="text_edit">Edit</string>
    <string name="text_addresses">Addresses</string>
    <string name="text_logout">Logout</string>
    <string name="prefFullName">prefFullName</string>
    <string name="prefProfileImagePath">prefProfileImagePath</string>
    <string name="text_add_product">Add Product</string>
    <string name="add_product_image">Add product image</string>
    <string name="hint_product_title">Product Title</string>
    <string name="hint_product_price">Product Price (₹)</string>
    <string name="hint_product_description">Product Description</string>
    <string name="hint_product_quantity">Product Quantity</string>
    <string name="prefUserId">prefUserId</string>
    <string name="text_products_not_added_yet">Products not added yet.</string>
    <string name="product_price">₹ %s</string>
    <string name="text_no_items_found">No items found.</string>
    <string name="text_delete_product_content_description">Delete Product</string>
    <string name="delete_alert_title">Delete</string>
    <string name="text_stock_quantity">Stock Quantity </string>
    <string name="text_add_to_cart">Add to cart</string>
    <string name="text_go_to_cart">Go to cart</string>
    <string name="text_cart">My Cart</string>
    <string name="text_empty_cart">No item found in cart!</string>
    <string name="text_subtotal">Subtotal</string>
    <string name="text_shipping">Shipping</string>
    <string name="text_total">Total</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_out_stock">Out of stock</string>
    <string name="text_no_addresses_found">No Address Found!</string>
    <string name="text_add_address">Add Address</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_address">Address</string>
    <string name="text_pincode">Zipcode/Pincode</string>
    <string name="text_additional_note">Additional Note</string>
    <string name="text_other">Other</string>
    <string name="text_office">Office</string>
    <string name="text_home">Home</string>
    <string name="text_full_address">%s - %s</string>
    <string name="text_phone_number_with_country_code">+%d-%s</string>
    <string name="text_update">Update</string>
    <string name="title_add_address">Add Address</string>
    <string name="title_edit_address">Edit Address</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="text_place_order">Place order</string>
    <string name="text_no_order_placed_yet">No order placed yet!</string>
    <string name="lbl_order_details">Order Details</string>
    <string name="text_order_id">Order ID</string>
    <string name="text_order_date">Order Date</string>
    <string name="text_order_status">Order Status</string>
    <string name="title_product_details">Product Detail</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="status_pending">Pending</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_delivered">Delivered</string>
    <string name="text_no_product_sold_yet">No product sold yet!</string>
    <string name="text_sold">Sold</string>
    <string name="title_sold_product_detail">Sold Product Detail</string>
    <string name="title_sold_products">Sold Products</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_my_address">My Address</string>
    <string name="title_add_product">Add Product</string>
</resources>