<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.shopkart.ui.fragments.profile.ProfileFragment"
        android:label="@string/text_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.shopkart.ui.fragments.dashboard.DashboardFragment"
        android:label="@string/text_dashboard"
        tools:layout="@layout/fragment_dashboard"/>

    <fragment
        android:id="@+id/orderFragment"
        android:name="com.example.shopkart.ui.fragments.order.OrderFragment"
        android:label="@string/text_order"
        tools:layout="@layout/fragment_order"/>

    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.shopkart.ui.fragments.product.ProductFragment"
        android:label="@string/text_product"
        tools:layout="@layout/fragment_product"/>

    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.shopkart.ui.fragments.settings.SettingFragment"
        tools:layout="@layout/fragment_setting">

    </fragment>

    <action
        android:id="@+id/action_global_profileFragment"
        app:destination="@id/profileFragment" />

    <action
        android:id="@+id/action_global_settingFragment"
        app:destination="@id/settingFragment" />

</navigation>