<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.shopkart.ui.fragments.address_detail.AddressDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginVertical="@dimen/dimen_16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/text_full_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text="@={viewModel.observableFullName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/text_phone_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"
                        android:text="@={viewModel.observablePhoneNumber}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/text_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:text="@={viewModel.observableAddress}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/text_pincode">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="6"
                        android:text="@={viewModel.observableZipCode}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/text_additional_note">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text="@={viewModel.observableAdditionalNote}" />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rg_address_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_home"
                        style="@style/RadioButtonStyle"
                        android:checked="@={viewModel.observableTypeHome}"
                        android:text="@string/text_home"
                        tools:checked="true" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_office"
                        style="@style/RadioButtonStyle"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:checked="@={viewModel.observableTypeOffice}"
                        android:text="@string/text_office" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_other"
                        style="@style/RadioButtonStyle"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:checked="@={viewModel.observableTypeOther}"
                        android:text="@string/text_other" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/text_other"
                    android:visibility="@{viewModel.observableTypeOther ? View.VISIBLE : View.GONE}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text="@={viewModel.observableOther}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_submit"
                    style="@style/ShopKartButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:text="@{viewModel.observableButtonName}"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="@{() -> viewModel.onSubmitButtonClick()}" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>