<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.shopkart.ui.fragments.add_product.AddProductViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_product_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_200dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:background="@color/product_image_placeholder_color"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/iv_camera_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@{viewModel.observableImageAttached ? @drawable/ic_edit : @drawable/ic_add_camera}"
                tools:src="@drawable/ic_add_camera"
                android:layout_margin="@dimen/dimen_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/iv_product_image"
                android:contentDescription="@string/add_product_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_camera_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/hint_product_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:imeOptions="actionNext"
                        android:text="@={viewModel.observableProductTitle}"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/hint_product_price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:imeOptions="actionNext"
                        android:text="@={viewModel.observableProductPrice}"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/hint_product_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:imeOptions="actionNext"
                        android:lines="3"
                        android:text="@={viewModel.observableProductDescription}"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_quantity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/hint_product_quantity">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:imeOptions="actionNext"
                        android:text="@={viewModel.observableProductQuantity}"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_save_button"
                    style="@style/ShopKartButtonStyle"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/text_save"
                    android:onClick="@{() -> viewModel.onProductSaveButtonClick()}"
                    android:layout_marginTop="@dimen/dimen_32dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="match_parent" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>